deployment/uat/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sml-wawa-shop-app-uat
  namespace: sml-uat
  labels:
    app: sml-wawa-shop-app-uat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sml-wawa-shop-app-uat
  template:
    metadata:
      labels:
        app: sml-wawa-shop-app-uat
    spec:
      containers:
      - name: sml-wawa-shop-api-uat
        image: ghcr.io/smlsoft/sml-wawa-shop-app:staging-ba35a54
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: web-port
          protocol: TCP
        resources:
          requests:
            memory: "512M"
            cpu: "500m"
          limits:
            memory: "512M"
            cpu: "500m"
